Update pom.xml file with new plugins and versions
- This version of pom.xml file includes all new plugins that was used during the immigration.
- It also includes the updating of some versions or sources in existing plugins.
- Some new dependencies was also added.
- The dependency on tools.jar file which was necessary to work under the usage of com.sun.javadoc was removed.